Fix link to CSS.

--- a/templates/market.html
+++ b/templates/market.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <title>Market - {{ market.name }}</title>
-<link rel=stylesheet type=text/css href="static/style.css">
+<link rel=stylesheet type=text/css href="/static/style.css">
 <div class="market-{{ market.state }}">
 	<h2 class="market-name">{{ market.name }}</h2>
 	<table>
